--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		springBootVersion = '1.5.3.RELEASE'
+		springBootVersion = '1.5.4.RELEASE'
 	}
 	repositories {
 		mavenCentral()
@@ -23,9 +23,13 @@ repositories {
 
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-web')
-	compile('org.springframework.security.oauth:spring-security-oauth2')
-	compile('org.springframework.security:spring-security-jwt')
+	compile 'org.springframework.boot:spring-boot-starter-actuator',
+	        'org.springframework.boot:spring-boot-starter-web',
+	        'org.springframework.cloud:spring-cloud-starter-sleuth',
+	        'org.springframework.cloud:spring-cloud-starter-zipkin',
+	        'org.springframework.security.oauth:spring-security-oauth2',
+	        'org.springframework.security:spring-security-jwt'
+	
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
